--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1,2 +1,14 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Itim&family=Montserrat&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
 body {
+    font-family: Montserrat, sans-serif;
+    font-weight: 400;
+
 }
