--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1,6 +1,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Itim&family=Montserrat&display=swap');
 
+/* default styling */
+
 * {
     margin: 0;
     padding: 0;
@@ -10,5 +12,63 @@
 body {
     font-family: Montserrat, sans-serif;
     font-weight: 400;
+    color: #333333;
+}
+
+h1, h2, h3 {
+    font-family: Itim, sans-serif;
+    font-weight: 700; 
+    text-decoration: none;
+    letter-spacing: 3px;
+    }
+
+a {
+    text-decoration: none;
+    color: #333333;
+}
+
+    /* header */
+
+header {
+    background-color: #44b3a5;
+    width: auto;
+    height: 15%;
+    overflow: hidden;
+}
+
+#logo {
+    float: left;
+    margin: 15px 5px 15px 15px;
+    letter-spacing: 3px;
 
 }
+
+#menu {
+    font-weight: 700;
+    font-size: 115%;
+    font-family: Itim, sans-serif;
+}
+
+#menu ul{
+    padding:20;
+    margin:25px 10px 5px 0;
+    text-align:right;
+    width:1000px;
+    float:right;
+}
+
+#menu li{
+    text-align:center;
+    display:inline;
+    margin-left:3px;
+    width:25px;
+    list-style:none;
+}
+
+#menu li:not(:first-child):before {
+    content: "|      ";
+    }
+
+
+
+
