--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Itim&family=Montserrat&display=swap');
 
 /* default styling */
@@ -15,19 +14,25 @@ body {
     color: #333333;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     font-family: Itim, sans-serif;
-    font-weight: 700; 
+    font-weight: 700;
     text-decoration: none;
     letter-spacing: 3px;
-    }
+}
 
 a {
     text-decoration: none;
     color: #333333;
 }
 
-    /* header */
+a:hover {
+    color: #DD9A89;
+}
+
+/* header */
 
 header {
     background-color: #44b3a5;
@@ -49,26 +54,22 @@ header {
     font-family: Itim, sans-serif;
 }
 
-#menu ul{
-    padding:20;
-    margin:25px 10px 5px 0;
-    text-align:right;
-    width:1000px;
-    float:right;
+#menu ul {
+    padding: 20;
+    margin: 25px 10px 5px 0;
+    text-align: right;
+    width: 1000px;
+    float: right;
 }
 
-#menu li{
-    text-align:center;
-    display:inline;
-    margin-left:3px;
-    width:25px;
-    list-style:none;
+#menu li {
+    text-align: center;
+    display: inline;
+    margin-left: 3px;
+    width: 25px;
+    list-style: none;
 }
 
 #menu li:not(:first-child):before {
     content: "|      ";
-    }
-
-
-
-
+}
