--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -29,71 +29,6 @@ a {
     color: #333333;
 }
 
-/* Classes used across pages */
-
-.sections-headers {
-    text-align: center;
-    padding: 20px;
-}
-
-.solid-orange {
-    background-color: #E8A87C;
-    text-align: center;
-    width: 900px;
-    padding: 35px 10px;
-    margin: 0 auto;
-    line-height: 200%;
-    color: #101010;
-}
-
-.solid-blue {
-    background-color: #85CDCA;
-    width: 900px;
-    padding: 10px;
-    margin: 0 auto;
-    color: #101010;
-}
-
-.solid-pink {
-    background-color: #C38D9D;
-    width: 900px;
-    padding: 10px;
-    margin: 0 auto;
-    color: #101010;
-}
-
-.solid-grey {
-    background-color: #DFDCD9;
-    width: 900px;
-    padding: 10px;
-    margin: 0 auto;
-    color: #101010;
-}
-
-.solid-green {
-    background-color: #7F9887;
-    width: 900px;
-    padding: 10px;
-    margin: 0 auto;
-    color: #101010;
-}
-
-.solid-peach {
-    background-color: #DD9A89;
-    width: 900px;
-    padding: 10px;
-    margin: 0 auto;
-    color: #101010;
-}
-
-
-.square_image {
-    width: 300px;
-    height: 300px;
-
-}
-
-
 /* header */
 
 header {
@@ -154,6 +89,7 @@ li a:hover,
 
 li.dropdown {
     display: inline-block;
+
 }
 
 .dropdown-content {
@@ -163,7 +99,7 @@ li.dropdown {
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
-}
+    }
 
 .dropdown-content a {
     color: #333333;
@@ -171,7 +107,7 @@ li.dropdown {
     text-decoration: none;
     display: block;
     text-align: left;
-    float: right;
+    
 }
 
 .dropdown-content a:hover {
@@ -179,7 +115,8 @@ li.dropdown {
 }
 
 .dropdown:hover .dropdown-content {
-    display: block;
+    display: inline-block;
+    
 }
 
 /* footer */
@@ -222,6 +159,73 @@ footer li {
     list-style: none;
     font-size: 150%;
 }
+
+/* Classes used across pages */
+
+.sections-headers {
+    text-align: center;
+    padding: 40px;
+}
+
+.solid-orange {
+    background-color: #E8A87C;
+    text-align: center;
+    width: 900px;
+    padding: 35px 10px;
+    margin: 0 auto;
+    line-height: 200%;
+    color: #101010;
+}
+
+.solid-blue {
+    background-color: #85CDCA;
+    width: 900px;
+    padding: 10px;
+    margin: 0 auto;
+    color: #101010;
+}
+
+.solid-pink {
+    background-color: #C38D9D;
+    width: 900px;
+    padding: 10px;
+    margin: 0 auto;
+    color: #101010;
+}
+
+.solid-grey {
+    background-color: #DFDCD9;
+    width: 900px;
+    padding: 10px;
+    margin: 0 auto;
+    color: #101010;
+}
+
+.solid-green {
+    background-color: #7F9887;
+    width: 900px;
+    padding: 10px;
+    margin: 0 auto;
+    color: #101010;
+}
+
+.solid-peach {
+    background-color: #DD9A89;
+    width: 900px;
+    padding: 10px;
+    margin: 0 auto;
+    color: #101010;
+}
+
+
+.square_image {
+    width: 300px;
+    height: 300px;
+
+}
+
+
+
 
 /* home page */
 
