--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -99,7 +99,7 @@ li.dropdown {
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
-    }
+}
 
 .dropdown-content a {
     color: #333333;
@@ -107,7 +107,7 @@ li.dropdown {
     text-decoration: none;
     display: block;
     text-align: left;
-    
+
 }
 
 .dropdown-content a:hover {
@@ -116,7 +116,7 @@ li.dropdown {
 
 .dropdown:hover .dropdown-content {
     display: inline-block;
-    
+
 }
 
 /* footer */
@@ -374,4 +374,46 @@ footer li {
     width: 900px;
     padding: 35px 10px;
     margin: 0 auto;
+}
+
+/* Top 10 Activities */
+
+#top10_pane {
+    width: 900px;
+    height: 1110px;
+    margin: 0 auto;
+    position: relative;
+
+}
+
+#play_dough_img {
+    position: absolute;
+    top: 6px;
+    left: 10px;
+    border: 3px solid #333333;
+    padding: 3px;
+}
+
+#water_img {
+    position: absolute;
+    top: 400px;
+    left: 10px;
+    border: 3px solid #333333;
+    padding: 3px;
+}
+
+#mud_img {
+    position: absolute;
+    bottom: 6px;
+    left: 10px;
+    border: 3px solid #333333;
+    padding: 3px;
+}
+
+
+.activities_style {
+    margin: 5px 5px 5px 0;
+    width: 500px;
+    float: right;
+
 }
