--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -360,6 +360,7 @@ footer li {
     padding: 35px 10px;
     margin: 0 auto;
 }
+
 /* Play in Motion */
 
 #iframe {
@@ -402,6 +403,7 @@ footer li {
     border: 3px solid #333333;
     padding: 3px;
 }
+
 .activities_style {
     margin: 5px 5px 5px 0;
     width: 500px;
@@ -426,7 +428,7 @@ footer li {
     width: 900px;
     padding: 10px;
     margin: 0 auto;
-  }
+}
 
 .grid_figure {
     display: inline-grid;
@@ -434,24 +436,24 @@ footer li {
     text-align: center;
     padding: 15px;
     margin: 0 auto;
-  }
+}
 
-  .anxiety_activity {
+.anxiety_activity {
     width: 200px;
     height: 200px;
     padding: 10px;
 }
 
 
-  /* Tooltip for Anxiety activities */
+/* Tooltip for Anxiety activities */
 
-  .tooltip {
+.tooltip {
     position: relative;
     display: inline-block;
     border-bottom: 1px dotted #333333;
-  }
-  
-  .tooltip .tooltiptext {
+}
+
+.tooltip .tooltiptext {
     visibility: hidden;
     width: 200px;
     background-color: #333333;
@@ -464,9 +466,9 @@ footer li {
     bottom: 150%;
     left: 50%;
     margin-left: -100px;
-  }
-  
-  .tooltip .tooltiptext::after {
+}
+
+.tooltip .tooltiptext::after {
     content: "";
     position: absolute;
     top: 100%;
@@ -474,9 +476,39 @@ footer li {
     margin-left: -5px;
     border-width: 5px;
     border-style: solid;
-    border-color:#333333 transparent transparent transparent;
-  }
-  
-  .tooltip:hover .tooltiptext {
+    border-color: #333333 transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
     visibility: visible;
-  }
+}
+
+/* Back To Top buttons */
+
+.top-button {
+    font-weight: 700;
+    font-size: 80%;
+    background-color: #44b3a5;
+    padding: 10px;
+    border-radius: 12px;
+    width: 100px;
+    text-align: center;
+}
+
+.top-button:hover {
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+.contain-button {
+    margin: 0 auto;
+    width: 100px;
+    height: 35px;
+    padding: 50px 0px 0px 0px;
+}
+
+#contain-button-last {
+    margin: 0 auto;
+    width: 110px;
+    height: 100px;
+    padding:50px 0px 0px 0px;
+}
