--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -55,7 +55,7 @@ a {
 #menu ul {
     margin: 25px 10px 5px 0;
     text-align: right;
-    width: 1000px;
+    width: auto;
     float: right;
 }
 
@@ -284,14 +284,10 @@ footer li {
     padding: 10px;
     border-radius: 12px;
     width: 150px;
-    position: absolute;
-    z-index: -1;
-    top: 570px;
-    left: 155px;
+
 }
 
 #learn-more:hover {
-    position: absolute;
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -528,4 +524,44 @@ footer li {
 
 .tooltip:hover .tooltiptext {
     visibility: visible;
+}
+
+/* @media queries */
+
+@media screen and (max-width: 850px) {
+
+    #header {
+        background-color: #44b3a5;
+        width: 100%;
+        height: auto;
+    }
+
+    #logo {
+        float: none;
+        letter-spacing: 0;
+        text-align: center;
+        padding-top: 10px;
+    }
+
+    #menu {
+        font-size: 100%;
+    }
+    
+    #menu ul {
+        width: auto;
+        float: none;
+    }
+    
+    #menu li {
+        display:list-item;
+        width: auto;
+    }
+    
+    #menu li:not(:first-child):before {
+        content: "";
+    }
+
+    .dropdown:hover .dropdown-content {
+        display: none;
+    }
 }
